--- a/home.css
+++ b/home.css
@@ -41,7 +41,9 @@ header button {
 }
 
 /* 메인 안 리스트 크기 */
-section {
+section.container-list {
+    padding-right: 20px;
+    padding-left: 20px;
     width: 1000px;
 }
 
