--- a/home.css
+++ b/home.css
@@ -43,6 +43,7 @@ header button {
 section.container-list {
     padding-left: 10px;
     padding-right: 10px;
+    padding-bottom: 10px;
     width: 960px;
 }
 
