--- a/home.css
+++ b/home.css
@@ -30,7 +30,8 @@ header button {
 .lzMainContent {
     padding-top: 10px;
     width: 1400px;
-    margin:auto;
+    margin-left:150px;
+    margin-right:150px;
 }
 
 /* 리스트, 사이드 총괄 */
@@ -41,21 +42,21 @@ header button {
 
 /* 메인 안 리스트 크기 */
 section.container-list {
-    padding-right: 10px;
+    padding-right: 20px;
     padding-bottom: 10px;
-    width: 980px;
+    width: 1000px;
 }
 
 /* 사이드 광고 크기 */
 #aside-left {
-    width: 190px;
+    width: 180px;
 }
 #aside-right {
     width: 200px;
 }
 
 .date, .clock {
-    width: 1320px;
+    width: 1400px;
 }
 
 /* 날짜 */
@@ -77,7 +78,7 @@ section.container-list {
 
 /* 사용자 이름 */
 .form, .greeting {
-    width:1320px;
+    width:1400px;
     margin-top:10px;
     padding-bottom:20px;
     display:none;
