--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0px;
+    margin: 0 auto;
 }
 
 header button {
@@ -28,7 +28,6 @@ header button {
 
 /* 메인 전체 크기 */
 .lzMainContent {
-    padding-top: 10px;
     width: 1300px;
     margin:auto;
 }
@@ -36,7 +35,7 @@ header button {
 /* 리스트, 사이드 총괄 */
 .section-aside {
     width: 1300px;
-    display: flex;
+    display: -webkit-inline-box;
 }
 
 /* 메인 안 리스트 크기 */
