--- a/home.css
+++ b/home.css
@@ -35,7 +35,7 @@ header button {
 
 /* 리스트, 사이드 총괄 */
 .section-aside {
-    width: 100%;
+    width: 1400px;
     margin: 0 auto;
     display: flex;
 }
