--- a/home.css
+++ b/home.css
@@ -35,7 +35,7 @@ header button {
 
 /* 리스트, 사이드 총괄 */
 .section-aside {
-    width: 1400px;
+    width: 80%;
     margin: 0 auto;
     display: flex;
 }
@@ -43,6 +43,8 @@ header button {
 /* 메인 안 리스트 크기 */
 section.container-list {
     margin: 0 auto;
+    padding-left: 10px;
+    padding-right: 10px;
     padding-bottom: 10px;
     width: 1040px;
 }
