--- a/home.css
+++ b/home.css
@@ -276,13 +276,14 @@ a {
 }
 
 /* 메모 */
-.list-box {
+.memo-box {
     display:none;
     width: 100%;
     border: 3px solid black;
     padding: 10px;
+    margin-bottom: 10px;
 }
-.list-box h3 {
+.memo-box h3 {
     padding-bottom: 10px;
     text-align: center;
     margin: 10px 0 10px 0;
