--- a/home.css
+++ b/home.css
@@ -276,14 +276,14 @@ a {
 }
 
 /* 메모 */
-.memo-box {
+.memo {
     display:none;
     width: 300px;
     border: 3px solid black;
     padding: 10px;
     margin-bottom: 10px;
 }
-.memo-box h3 {
+.memo h3 {
     padding-bottom: 10px;
     text-align: center;
     margin: 10px 0 10px 0;
@@ -300,7 +300,7 @@ a {
     padding: 0 10px;
     height: 20px;
 }
-.list-table {
+.tablelist {
     border-spacing: 0px;
     border-collapse: collapse;
     width: 100%;
