--- a/home.css
+++ b/home.css
@@ -103,9 +103,6 @@ aside {
     float:right;
     width:300px;
 }
-#aside-right {
-    margin-left:10px;
-}
 
 /* 날짜 */
 .date h4 {
@@ -281,10 +278,9 @@ a {
 /* 메모 */
 .memo {
     display:none;
-    width: 300px;
+    width: 100%;
     border: 3px solid black;
     padding: 10px;
-    margin-bottom: 10px;
 }
 .memo h3 {
     padding-bottom: 10px;
@@ -303,7 +299,7 @@ a {
     padding: 0 10px;
     height: 20px;
 }
-.tablelist {
+.list-table {
     border-spacing: 0px;
     border-collapse: collapse;
     width: 100%;
