--- a/home.css
+++ b/home.css
@@ -278,7 +278,7 @@ a {
 /* 메모 */
 .memo {
     display:none;
-    width: 100%;
+    width: 300px;
     border: 3px solid black;
     padding: 10px;
 }
