--- a/home.css
+++ b/home.css
@@ -278,7 +278,7 @@ a {
 /* 메모 */
 .memo {
     display:none;
-    width: 300px;
+    width: 274px;
     border: 3px solid black;
     padding: 10px;
 }
@@ -337,7 +337,7 @@ tbody td:first-child {
     outline:none;
 }
 
-#ads {
+.ads {
     margin-top: 10px;
 }
 
