--- a/home.css
+++ b/home.css
@@ -361,4 +361,20 @@ tbody td:first-child {
     .search-txt {
         width:83%;
     }
+    .askName {
+        width:300px;
+        margin-bottom:10px;
+    }
+    .form h1 {
+        width:300px;
+        margin:0 auto;
+    }
+    .form h4 {
+        width:300px;
+        margin:0 auto;
+    }
+    .form h5 {
+        width:400px;
+        margin:0 auto;
+    }
 }
